docs: documented createOpeningHandler
